# enterprise_rag_del

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  iso_assist_main.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_web.bat  run_web.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  coding-standards.md  contributing.md  launch_announcement.md  roadmap.md  troubleshooting.md
examples/: ISO_9001_CAPA_Procedure_Sample.txt  iso-9001-quality-manual-sample.txt  sample-questions.md  sample_questions.md
scripts/: setup.bat  setup.sh
src/iso_assist/: __init__.py  config.py  desktop.py  server.py
src/iso_assist/models/: chat_store.py  doc_memory.py
src/iso_assist/services/: document_loader.py  ingest.py  ollama_manager.py  prompts.py  rag_engine.py
src/iso_assist/ui/: index.html
src/iso_assist/utils/: __init__.py  logger.py
src/onprem_rag/: __init__.py  config.py  desktop.py  server.py
src/onprem_rag/models/: __init__.py  agent_profile_store.py  attachment_store.py  chat_store.py
src/onprem_rag/services/: __init__.py  document_loader.py  ingest.py  ollama_manager.py  prompts.py  rag_engine.py
src/onprem_rag/ui/: index.html
src/onprem_rag/utils/: logger.py
tests/: test_agent_profiles.py  test_document_loader.py  test_ingest.py  test_rag_engine.py  test_server.py
