[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "private-rag-workbench"
version = "0.1.0"
description = "Laptop-first document assistant with local LLM inference and cited RAG"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Project contributors" }]
keywords = ["rag", "ollama", "local-llm", "document-ai", "privacy"]
dependencies = [
    "pywebview>=4.4.1,<6",
    "ollama>=0.4,<1",
    "chromadb>=0.5,<2",
    "pdfplumber>=0.10,<1",
    "pypdf>=3.17,<7",
    "python-docx>=1.1,<2",
    "python-dotenv>=1.0,<2",
    "flask>=3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]

[project.scripts]
iso-assist     = "iso_assist.desktop:main"
iso-assist-web = "iso_assist.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iso_assist = ["ui/*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
